--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "datatables.net": "^2.2.1",
         "datatables.net-dt": "^2.2.1"
     }
 }
